--- a/src/App.css
+++ b/src/App.css
@@ -1,337 +1,369 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700&subset=vietnamese');
-* {
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
-}
-
-body {
-    background-color: #EBDFD9;
-    font-family: "Calibri", "Roboto", sans-serif;
-}
-
-.chat_window {
-    position: absolute;
-    width: calc(100% - 20px);
-    max-width: 800px;
-    height: 100%;
-    border-radius: 10px;
-    background-color: #fff;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-    background-color: #f8f8f8;
-    overflow: hidden;
-    max-height: 600px;
-}
-
-.top_menu {
-    background-color: #fff;
-    width: 100%;
-    padding: 20px 0 15px;
-    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
-}
-
-.top_menu .buttons {
-    margin: 3px 0 0 20px;
-    position: absolute;
-}
-
-.top_menu .buttons .button {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 10px;
-    position: relative;
-}
-
-.top_menu .buttons .button.close {
-    background-color: #f5886e;
-}
-
-.top_menu .buttons .button.minimize {
-    background-color: #fdbf68;
-}
-
-.top_menu .buttons .button.maximize {
-    background-color: #a3d063;
-}
-
-.top_menu .title {
-    text-align: center;
-    color: #bcbdc0;
-    font-size: 20px;
-}
-
-.messages {
-    position: relative;
-    list-style: none;
-    padding: 20px 10px 0 10px;
-    margin: 0;
-    height: calc(100% - 100px);
-    overflow: auto;
-}
-
-.messages .message {
-    clear: both;
-    margin: 20px 0;
-    transition: all 0.5s linear;
-    opacity: 0;
-    display: flex;
-    align-items: center;
-}
-
-.messages .message.left .avatar {
-    background-color: #f5886e;
-    float: left;
-    box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2)
-}
-
-.messages .message.left .text_wrapper {
-    background-color: #FBF8F4;
-    margin-left: 20px;
-    box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
-}
-
-.messages .message.left .text_wrapper::after,
-.messages .message.left .text_wrapper::before {
-    right: 100%;
-    border-right-color: #FBF8F4;
-}
-
-.messages .message.left .text {
-    color: #363636;
-}
-
-.messages .message.right .avatar {
-    background-color: #fdbf68;
-    float: right;
-    box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
-}
-
-.messages .message.right .text_wrapper {
-    background-color: #9CC2BF;
-    margin: 20px;
-    float: right;
-    text-align: right;
-    box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
-}
-
-.messages .message.right .text_wrapper::after,
-.messages .message.right .text_wrapper::before {
-    left: 100%;
-    border-left-color: #9CC2BF;
-}
-
-.messages .message.right .text {
-    color: #fff;
-}
-
-.messages .message.appeared {
-    opacity: 1;
-}
-
-.messages .message .avatar {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    display: inline-block;
-}
-
-.messages .message .text_wrapper {
-    display: inline-block;
-    padding: 20px;
-    border-radius: 6px;
-    width: calc(100% - 85px);
-    min-width: 100px;
-    position: relative;
-}
-
-.messages .message .text_wrapper::after,
-.messages .message .text_wrapper:before {
-    top: 28px;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-}
-
-.messages .message .text_wrapper::after {
-    border-width: 13px;
-    margin-top: 0px;
-}
-
-.messages .message .text_wrapper::before {
-    border-width: 15px;
-    margin-top: -2px;
-}
-
-.messages .message .text_wrapper .text {
-    font-size: 18px;
-    font-weight: 300;
-}
-
-.bottom_wrapper {
-    position: relative;
-    width: 100%;
-    background-color: #fff;
-    padding: 20px 20px;
-    bottom: 0;
-}
-
-.bottom_wrapper .message_input_wrapper {
-    display: inline-block;
-    height: 50px;
-    border-radius: 25px;
-    border: 1px solid #bcbdc0;
-    width: calc(100% - 160px);
-    position: relative;
-    padding: 0 20px;
-}
-
-.bottom_wrapper .message_input_wrapper .message_input {
-    border: none;
-    height: 100%;
-    box-sizing: border-box;
-    width: calc(100% - 40px);
-    position: absolute;
-    outline-width: 0;
-    color: gray;
-    font-size: 17px;
-}
-
-.bottom_wrapper .send_message {
-    width: 140px;
-    height: 50px;
-    display: inline-block;
-    border-radius: 50px;
-    background-color: #a3d063;
-    border: 2px solid #a3d063;
-    color: #fff;
-    cursor: pointer;
-    transition: all 0.2s linear;
-    text-align: center;
-    float: right;
-}
-
-.bottom_wrapper .send_message:hover {
-    color: #a3d063;
-    background-color: #fff;
-}
-
-.bottom_wrapper .send_message .text {
-    font-size: 18px;
-    font-weight: 300;
-    display: inline-block;
-    line-height: 48px;
-}
-
-.message_template {
-    display: none;
-}
-
-.menu {
-    float: left;
-    width: 20%;
-    height: 100%;
-    border-right: 1px solid #ddd;
-}
-
-.content {
-    float: left;
-    width: 80%;
-    height: 100%;
-    background: #FBF8F4;
-}
-
-.user {
-    color: #45829b;
-    font-weight: 500;
-    font-size: 30px;
-    list-style: none;
-}
-
-.user-name {
-    font-size: 20px;
-    color: red;
-}
-
-::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #9CC3C0;
-    opacity: 1;
-    /* Firefox */
-}
-
-li.message.right.appeared .avatar {
-    order: 2;
-}
-
-.text b {
-    font-weight: 600;
-}
-
-h1.big-title {
-    font-weight: 600;
-    color: #363636;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.login_form {
-    text-align: center;
-}
-
-input.login-form {
-    width: 500px;
-    height: 60px;
-    border-radius: 5px;
-    border: 1px solid #888;
-    margin: 0 20px 0 0;
-    padding: 10px;
-    font-size: 15px;
-}
-
-input.login-btn {
-    height: 60px;
-    padding: 0 30px;
-    background: #81B0B2;
-    border-radius: 5px;
-    border: 1px solid #888;
-    cursor: pointer;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-
-/* width */
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-
-/* Track */
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-radius: 20px;
-}
-
-
-/* Handle */
-
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 20px;
-}
-
-
-/* Handle on hover */
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700&subset=vietnamese');
+    * {
+        box-sizing: border-box;
+        font-family: 'Montserrat', sans-serif;
+    }
+    
+    body {
+        background-color: #EBDFD9;
+        font-family: "Calibri", "Roboto", sans-serif;
+    }
+    
+    .chat_window {
+        position: absolute;
+        width: calc(100% - 20px);
+        max-width: 800px;
+        height: 100%;
+        border-radius: 10px;
+        background-color: #fff;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+        background-color: #f8f8f8;
+        overflow: hidden;
+        max-height: 600px;
+    }
+    
+    .top_menu {
+        background-color: #fff;
+        width: 100%;
+        padding: 20px 0 15px;
+        box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
+    }
+    
+    .top_menu .buttons {
+        margin: 3px 0 0 20px;
+        position: absolute;
+    }
+    
+    .top_menu .buttons .button {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        display: inline-block;
+        margin-right: 10px;
+        position: relative;
+    }
+    
+    .top_menu .buttons .button.close {
+        background-color: #f5886e;
+    }
+    
+    .top_menu .buttons .button.minimize {
+        background-color: #fdbf68;
+    }
+    
+    .top_menu .buttons .button.maximize {
+        background-color: #a3d063;
+    }
+    
+    .top_menu .title {
+        text-align: center;
+        color: #bcbdc0;
+        font-size: 20px;
+    }
+    
+    .messages {
+        position: relative;
+        list-style: none;
+        padding: 20px 10px 0 10px;
+        margin: 0;
+        height: calc(100% - 100px);
+        overflow: auto;
+    }
+    
+    .messages .message {
+        clear: both;
+        margin: 20px 0;
+        transition: all 0.5s linear;
+        opacity: 0;
+        display: flex;
+        align-items: center;
+    }
+    
+    .messages .message.left .avatar {
+        background-color: #f5886e;
+        float: left;
+        box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2)
+    }
+    
+    .messages .message.left .text_wrapper {
+        background-color: #FBF8F4;
+        margin-left: 20px;
+        box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
+    }
+    
+    .messages .message.left .text_wrapper::after,
+    .messages .message.left .text_wrapper::before {
+        right: 100%;
+        border-right-color: #FBF8F4;
+    }
+    
+    .messages .message.left .text {
+        color: #363636;
+    }
+    
+    .messages .message.right .avatar {
+        background-color: #fdbf68;
+        float: right;
+        box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
+    }
+    
+    .messages .message.right .text_wrapper {
+        background-color: #9CC2BF;
+        margin: 20px;
+        float: right;
+        text-align: right;
+        box-shadow: 2px 2px 35px 3px rgba(0, 0, 0, 0.2);
+    }
+    
+    .messages .message.right .text_wrapper::after,
+    .messages .message.right .text_wrapper::before {
+        left: 100%;
+        border-left-color: #9CC2BF;
+    }
+    
+    .messages .message.right .text {
+        color: #fff;
+    }
+    
+    .messages .message.appeared {
+        opacity: 1;
+    }
+    
+    .messages .message .avatar {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        display: inline-block;
+    }
+    
+    .messages .message .text_wrapper {
+        display: inline-block;
+        padding: 20px;
+        border-radius: 6px;
+        width: calc(100% - 85px);
+        min-width: 100px;
+        position: relative;
+    }
+    
+    .messages .message .text_wrapper::after,
+    .messages .message .text_wrapper:before {
+        top: 28px;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+    }
+    
+    .messages .message .text_wrapper::after {
+        border-width: 13px;
+        margin-top: 0px;
+    }
+    
+    .messages .message .text_wrapper::before {
+        border-width: 15px;
+        margin-top: -2px;
+    }
+    
+    .messages .message .text_wrapper .text {
+        font-size: 18px;
+        font-weight: 300;
+    }
+    
+    .bottom_wrapper {
+        position: relative;
+        width: 100%;
+        background-color: #fff;
+        padding: 20px 20px;
+        bottom: 0;
+    }
+    
+    .bottom_wrapper .message_input_wrapper {
+        display: inline-block;
+        height: 50px;
+        border-radius: 25px;
+        border: 1px solid #bcbdc0;
+        width: calc(100% - 160px);
+        position: relative;
+        padding: 0 20px;
+    }
+    
+    .bottom_wrapper .message_input_wrapper .message_input {
+        border: none;
+        height: 100%;
+        box-sizing: border-box;
+        width: calc(100% - 40px);
+        position: absolute;
+        outline-width: 0;
+        color: gray;
+        font-size: 17px;
+    }
+    
+    .bottom_wrapper .send_message {
+        width: 140px;
+        height: 50px;
+        display: inline-block;
+        border-radius: 50px;
+        background-color: #a3d063;
+        border: 2px solid #a3d063;
+        color: #fff;
+        cursor: pointer;
+        transition: all 0.2s linear;
+        text-align: center;
+        float: right;
+    }
+    
+    .bottom_wrapper .send_message:hover {
+        color: #a3d063;
+        background-color: #fff;
+    }
+    
+    .bottom_wrapper .send_message .text {
+        font-size: 18px;
+        font-weight: 300;
+        display: inline-block;
+        line-height: 48px;
+    }
+    
+    .message_template {
+        display: none;
+    }
+    
+    .menu {
+        float: left;
+        width: 20%;
+        height: 100%;
+        border-right: 1px solid #ddd;
+    }
+    
+    .content {
+        float: left;
+        width: 80%;
+        height: 100%;
+        background: #FBF8F4;
+    }
+    
+    .user {
+        color: #45829b;
+        font-weight: 500;
+        font-size: 30px;
+        list-style: none;
+    }
+    
+    .user-name {
+        font-size: 20px;
+        color: red;
+    }
+    
+     ::placeholder {
+        /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: #9CC3C0;
+        opacity: 1;
+        /* Firefox */
+    }
+    
+    li.message.right.appeared .avatar {
+        order: 2;
+    }
+    
+    .text b {
+        font-weight: 600;
+    }
+    
+    h1.big-title {
+        font-weight: 600;
+        color: #363636;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    
+    .login_form {
+        text-align: center;
+    }
+    
+    input.login-form {
+        width: 500px;
+        height: 60px;
+        border-radius: 5px;
+        border: 1px solid #888;
+        margin: 0 20px 0 0;
+        padding: 10px;
+        font-size: 15px;
+    }
+    
+    input.login-btn {
+        height: 60px;
+        padding: 0 30px;
+        background: #81B0B2;
+        border-radius: 5px;
+        border: 1px solid #888;
+        cursor: pointer;
+        color: #fff;
+        text-transform: uppercase;
+    }
+    /* width */
+    
+     ::-webkit-scrollbar {
+        width: 10px;
+    }
+    /* Track */
+    
+     ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+        border-radius: 20px;
+    }
+    /* Handle */
+    
+     ::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 20px;
+    }
+    /* Handle on hover */
+    
+     ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+    /* mobile */
+    
+    @media (max-width:768px) {
+        .content {
+            width: 100%;
+            height: 74%;
+        }
+        .menu {
+            width: 100%;
+            height: unset;
+            border-bottom: 1px solid #ddd;
+        }
+        ul.user {
+            padding: 0 0 0 20px;
+            margin: 10px 0;
+        }
+        ul.user p {
+            margin: 10px 0;
+        }
+        .login_form {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            padding: 0 10px;
+        }
+        input.login-form {
+            width: 100%;
+            margin: 0 0 20px 0;
+        }
+        .bottom_wrapper .send_message {
+            width: 100px;
+        }
+        .bottom_wrapper {
+            padding: 20px 10px;
+        }
+        .bottom_wrapper .message_input_wrapper {
+            width: calc(100% - 107px);
+        }
+    }
